fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,70 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Poppins", Tahoma, Geneva, Verdana, sans-serif;
 }
-/*============button==========*/
-.button {
-  position: relative;
-  background-color: transparent;
-  color: #e8e8e8;
-  font-weight: 600;
-  border-radius: 10px;
-  width: 150px;
-  height: 50px;
-  text-transform: uppercase;
-  cursor: pointer;
-  overflow: hidden;
-  box-shadow: 0 10px 20px rgba(51, 51, 51, 0.2);
-  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-}
 
-.button::before {
-  content: "Buy Ticket!";
-  display: flex;
-  align-items: center;
-  justify-content: center;
+html, body {
   width: 100%;
-  height: 100%;
-  pointer-events: none;
-  background: #181717;
-  transform: translate(0%, 90%);
-  z-index: 99;
-  border: 2px solid #e90e70;
-  position: relative;
-  transform-origin: bottom;
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.button::after {
-  content: "Buy Ticket";
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #e90e70;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  transform-origin: top;
-  transform: translate(0%, -100%);
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.button:hover::before {
-  transform: translate(0%, 0%);
-}
-
-.button:hover::after {
-  transform: translate(0%, -200%);
-}
-
-.button:focus {
-  outline: none;
-}
-
-.button:active {
-  scale: 0.95;
+  overflow-x: hidden; 
 }
 
 /*===========hide scrollbar==========*/
